2007-03-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoAuthenticator.m ([SOGoAuthenticator
	-userInContext:]): returns "SOGoUser".

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent -contentAsString]): overriden method that
	takes the privacy into account and discard the relevant fields if
	needed by generating a new content string and caching it.
	([SOGoCalendarComponent
	-saveContentString:contentStringbaseVersion:baseVersion]): if the
	new method above has cached a content string, release it and set
	it to nil so that it will have to be regenerated in the case it is
	requested further.
	([SOGoCalendarComponent -_filterPrivateComponent:component]):
	discard the fields that have to be hidden when the card is
	private.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder
	-appendObject:objectwithBaseURL:baseURLtoREPORTResponse:r]): make
	sure the cards are now handled as instances of
	SOGoCalendarComponent instead of SOGoContentObject so that their
	content string is taking the privacy classifiction into account.
	([SOGoAppointmentFolder -_privacySqlString]): new method that
	generates a query to determine what information can be given and
	if the card itself has to be shown.

	* UI/Scheduler/UIxComponent+Agenor.m ([UIxComponent
	-getICalPersonsFromValue:selectorValue]): removed useless
	"isAccessRestricted" method.

	* UI/Scheduler/UIxCalInlineAptView.m ([UIxCalInlineAptView
	-setStyle:_style]): test whether the values of orgmail and
	partmails are null before manipulating them, otherwise SOGo sends
	a "rangeOfString:" message to an NSNull, which makes it crashes.

	* OGoContentStore/OCSiCalFieldExtractor.m ([OCSiCalFieldExtractor
	-extractQuickFieldsFromEvent:_event]): we now use the new
	"symbolicAccessClass" method from iCalEntity to determine the
	value of the "classifiction" field.
	([OCSiCalFieldExtractor -extractQuickFieldsFromTodo:_task]): same
	as above.
